--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <section id="rewards" class="rewards">
     <h2>💰 Rewards Info</h2>
-    <p>Earn by sharing your plant growth journey. Rewards are distributed monthly in B3TR tokens for verified participants who share authentic growth updates.</p>
+    <p> Take care of your plants and share their progress to earn rewards. Every photo submission can earn you B3TR tokens — coming soon! </p>
   </section>
 
   <section id="contact" class="contact">
