--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <section id="home" class="hero">
-    <h1>Grow Plants 🌱, Earn Rewards 🌿</h1>
+    <h1>Grow Plants  Earn Rewards 🌿</h1>
     <p>Join GrowPlants and share your journey of growing a greener world.</p>
     <a href="#gallery" class="btn">Explore Gallery</a>
   </section>
