--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growplants</title>
-    <script src="https://unpkg.com/@vechain/connex@3.0.0/dist/connex.min.js"></script>
     <script src="https://unpkg.com/qrcode@1.5.3/build/qrcode.min.js"></script>
     <style>
         body {
@@ -32,6 +31,7 @@
             right: 15px;
             font-size: 28px;
             cursor: pointer;
+            color: white;
         }
         .menu {
             display: none;
@@ -101,7 +101,7 @@
         button:hover { background: #388e3c; }
         button:disabled { background: #a5d6a7; cursor: not-allowed; }
 
-        #qrCode { text-align: center; margin: 20px 0; }
+        #qrCode { text-align: center; margin: 20px 0; display: none; }
         #qrCode img { width: 220px; height: 220px; border: 8px solid white; border-radius: 12px; }
 
         video { width: 100%; max-width: 400px; border-radius: 12px; margin: 10px 0; }
@@ -116,7 +116,7 @@
 
 <header>
     <h1>Growplants</h1>
-    <div class="hamburger" onclick="toggleMenu()">Menu</div>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
     <ul class="menu" id="menu">
         <li onclick="showSection('home')">Home</li>
         <li onclick="showSection('about')">About</li>
@@ -132,9 +132,9 @@
     <h2>Welcome to Growplants</h2>
     <p>Grow plants, earn B3TR tokens!</p>
     <div class="plants-grid">
-        <img src="https://images.unsplash.com/photo-1453904300235-0f2f60d4383a?w=400" alt="Plant 1">
-        <img src="https://images.unsplash.com/photo-1594736797933-d0501ba2fe65?w=400" alt="Plant 2">
-        <img src="https://images.unsplash.com/photo-1587302164676-0a002a2e8b62?w=400" alt="Plant 3">
+        <img src="https://images.unsplash.com/photo-1453904300235-0f2f60d4383a?w=400" alt="Growing Plant 1">
+        <img src="https://images.unsplash.com/photo-1594736797933-d0501ba2fe65?w=400" alt="Growing Plant 2">
+        <img src="https://images.unsplash.com/photo-1587302164676-0a002a2e8b62?w=400" alt="Growing Plant 3">
     </div>
     <footer>
         <p>Contact: <a href="https://twitter.com/yourusername" style="color:#bbdefb;">@yourusername</a></p>
@@ -172,13 +172,13 @@
     <button id="connectBtn">Connect VeWorld Wallet</button>
     <div id="status"></div>
 
-    <div id="qrCode" style="display:none;">
+    <div id="qrCode">
         <p>Scan with <strong>VeWorld App</strong></p>
         <div id="qrcode"></div>
     </div>
 
     <div id="cameraSection" style="display:none; text-align:center;">
-        <button id="openCamera">Open Camera</button>
+        <button id="openCamera">📷 Open Camera</button>
         <video id="video" autoplay playsinline></video>
         <button id="capture" style="display:none;">Capture Photo</button>
         <canvas id="canvas"></canvas>
@@ -188,7 +188,6 @@
 </section>
 
 <script>
-    let connex;
     let userAddress = null;
     let stream = null;
 
@@ -207,50 +206,51 @@
     document.getElementById('connectBtn').onclick = () => {
         const btn = document.getElementById('connectBtn');
         btn.disabled = true;
-        btn.textContent = 'Opening VeWorld...';
+        btn.textContent = 'Connecting...';
 
-        // Deep link to VeWorld App
-        const dappId = 'growplants-dapp';
-        const request = {
-            type: 'auth',
-            payload: { message: 'Connect to Growplants to earn B3TR' }
-        };
+        // Generate QR URI (VeWorld deep link demo)
+        const dappId = 'growplants';
+        const message = 'Connect to Growplants for B3TR rewards';
+        const uri = `veworld://dapp/connect?dappId=${dappId}&message=${encodeURIComponent(message)}`;
 
-        const uri = `veworld://dapp/connect?dappId=${dappId}&request=${btoa(JSON.stringify(request))}`;
-        const wcUri = `wc:?uri=${encodeURIComponent(uri)}`;
-
-        // Show QR
-        document.getElementById('qrCode').style.display = 'block';
+        // Show QR Code
+        const qrCodeDiv = document.getElementById('qrCode');
+        qrCodeDiv.style.display = 'block';
         const qrDiv = document.getElementById('qrcode');
         qrDiv.innerHTML = '';
         QRCode.toCanvas(qrDiv, uri, { width: 220 }, (err) => {
-            if (err) console.error(err);
+            if (err) {
+                console.error('QR Error:', err);
+                qrDiv.innerHTML = '<p>QR Generation Failed</p>';
+            }
         });
 
-        // Try to open app (mobile)
+        // Try to open VeWorld app (mobile deep link)
         window.location.href = uri;
 
-        // Fallback: simulate connection after 8 seconds (for demo)
+        // Mock connect after 5 seconds (for testing; remove in production)
         setTimeout(() => {
             if (!userAddress) {
-                userAddress = '0x1234...abcd'; // Mock
-                document.getElementById('status').innerHTML = `<div class="status success">Connected: ${userAddress}</div>`;
+                userAddress = '0xMockAddress...ForTesting'; // Mock address
+                document.getElementById('status').innerHTML = `<div class="status success">Wallet Connected: ${userAddress}</div>`;
                 document.getElementById('cameraSection').style.display = 'block';
-                document.getElementById('qrCode').style.display = 'none';
+                qrCodeDiv.style.display = 'none';
                 btn.style.display = 'none';
             }
-        }, 8000);
+        }, 5000);
     };
 
     // === CAMERA ===
     document.getElementById('openCamera').onclick = async () => {
         try {
-            stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+            stream = await navigator.mediaDevices.getUserMedia({ 
+                video: { facingMode: 'environment' } // Back camera for plants
+            });
             const video = document.getElementById('video');
             video.srcObject = stream;
             document.getElementById('capture').style.display = 'block';
         } catch (err) {
-            document.getElementById('result').innerHTML = `<div class="status error">Camera error: ${err.message}</div>`;
+            document.getElementById('result').innerHTML = `<div class="status error">Camera error: ${err.message}. Allow camera access.</div>`;
         }
     };
 
@@ -263,7 +263,9 @@
         ctx.drawImage(video, 0, 0);
 
         // Stop camera
-        stream.getTracks().forEach(t => t.stop());
+        if (stream) {
+            stream.getTracks().forEach(t => t.stop());
+        }
         video.srcObject = null;
         document.getElementById('capture').style.display = 'none';
 
@@ -271,47 +273,51 @@
         img.src = canvas.toDataURL();
         img.onload = () => {
             if (isBlurry(img)) {
-                document.getElementById('result').innerHTML = `<div class="status error">Photo is blurry. Try again!</div>`;
+                document.getElementById('result').innerHTML = `<div class="status error">Error: Photo is blurry. Not valid for reward. Try again!</div>`;
             } else {
                 document.getElementById('result').innerHTML = `
                     <div class="status success">
-                        <strong>Reward Sent!</strong><br>
-                        0.5 B3TR added to your wallet<br>
-                        <small>(Check VeWorld App)</small>
+                        <strong>Great Photo!</strong><br>
+                        0.5 B3TR Token rewarded to your wallet.<br>
+                        <small>(Check VeWorld App - Mock for demo)</small>
                     </div>`;
             }
         };
     };
 
-    // === BLUR DETECTION ===
+    // === BLUR DETECTION (Improved) ===
     function isBlurry(img) {
         const canvas = document.createElement('canvas');
         const ctx = canvas.getContext('2d');
         canvas.width = img.width;
         canvas.height = img.height;
         ctx.drawImage(img, 0, 0);
-        const data = ctx.getImageData(0, 0, canvas.width, canvas.height).data;
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const data = imageData.data;
 
         let gray = [];
         for (let i = 0; i < data.length; i += 4) {
-            const v = 0.299 * data[i] + 0.587 * data[i+1] + 0.114 * data[i+2];
-            gray.push(v);
+            const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+            gray.push(avg);
         }
 
-        let variance = 0;
+        let laplacianVariance = 0;
         let count = 0;
+        const width = canvas.width;
         for (let y = 1; y < canvas.height - 1; y++) {
-            for (let x = 1; x < canvas.width - 1; x++) {
-                const idx = y * canvas.width + x;
-                const lap = -gray[idx-1] - gray[idx+1] - gray[idx-canvas.width] - gray[idx+canvas.width] + 4 * gray[idx];
-                variance += lap * lap;
+            for (let x = 1; x < width - 1; x++) {
+                const idx = y * width + x;
+                const sum = Math.abs(-gray[idx - width - 1] - 8 * gray[idx] + gray[idx - width + 1] +
+                                     gray[idx - 1] + gray[idx + 1] +
+                                     gray[idx + width - 1] + gray[idx + width] + gray[idx + width + 1]);
+                laplacianVariance += sum * sum;
                 count++;
             }
         }
-        variance /= count;
-        return variance < 80; // Adjust threshold
+        laplacianVariance = laplacianVariance / (count || 1);
+        return laplacianVariance < 100; // Threshold: lower = blurrier
     }
 </script>
 
 </body>
-  </html>
+</html>
